--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -34,6 +34,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
+                            android:id="@+id/backImage"
                             android:layout_width="20dp"
                             android:layout_height="15dp"
                             android:layout_centerInParent="true"
@@ -146,6 +147,7 @@
                             android:hint="@string/last_name_hint"
                             android:inputType="text"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -176,6 +178,7 @@
                             android:hint="@string/first_name_hint"
                             android:inputType="text"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -205,6 +208,7 @@
                             android:fontFamily="@font/montserrat_semibold"
                             android:hint="@string/phone_hint"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -238,6 +242,7 @@
                             android:hint="@string/email_hint"
                             android:inputType="textEmailAddress"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColor="@color/lightGrey"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
@@ -269,6 +274,7 @@
                             android:hint="@string/address_hint"
                             android:inputType="text"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -299,6 +305,7 @@
                             android:hint="@string/city_hint"
                             android:inputType="text"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -328,6 +335,7 @@
                             android:fontFamily="@font/montserrat_semibold"
                             android:hint="@string/postal_code_hint"
                             android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -368,6 +376,7 @@
                                 android:includeFontPadding="false"
                                 android:inputType="textPassword"
                                 android:paddingStart="20dp"
+                                android:textAlignment="viewStart"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/lightGrey"
                                 android:textSize="12sp" />
