--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -121,12 +121,13 @@
                     android:layout_width="0dp"
                     android:layout_height="63dp"
                     android:layout_weight="0.5"
+                    android:backgroundTint="@color/button_background_selector"
+                    android:enabled="false"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="@string/save_btn_label"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="13sp"
-                    android:backgroundTint="#E96614"/>
+                    android:textSize="13sp" />
 
             </LinearLayout>
         </LinearLayout>
