--- a/app/src/main/res/layout/update_password_dialog.xml
+++ b/app/src/main/res/layout/update_password_dialog.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:fontFamily="@font/montserrat_extrabold"
-            android:text="Changer mot de passe :"
+            android:text="@string/change_password_title"
             android:textColor="@color/blue" />
 
         <TextView
@@ -48,7 +48,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Mot de passe :"
+            android:text="@string/password_label"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
@@ -64,9 +64,10 @@
                 android:layout_height="40dp"
                 android:background="@drawable/editext_border"
                 android:fontFamily="@font/montserrat_semibold"
-                android:hint="Mot de passe"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
+                android:textAlignment="viewStart"
                 android:textColorHint="@color/lightGrey"
                 android:textSize="14sp" />
 
@@ -92,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Nouveau mot de passe :"
+            android:text="@string/new_password_label"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
@@ -108,9 +109,10 @@
                 android:layout_height="40dp"
                 android:background="@drawable/editext_border"
                 android:fontFamily="@font/montserrat_semibold"
-                android:hint="Mot de passe"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
+                android:textAlignment="viewStart"
                 android:textColorHint="@color/lightGrey"
                 android:textSize="14sp" />
 
@@ -135,9 +137,10 @@
                 android:layout_height="40dp"
                 android:background="@drawable/editext_border"
                 android:fontFamily="@font/montserrat_semibold"
-                android:hint="Confirmer mot de passe"
+                android:hint="@string/confirm_password_hint"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
+                android:textAlignment="viewStart"
                 android:textColorHint="@color/lightGrey"
                 android:textSize="14sp" />
 
@@ -164,7 +167,7 @@
                 android:layout_weight="0.5"
                 android:backgroundTint="@color/white"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Annuler"
+                android:text="@string/cancel_btn_label"
                 android:textAllCaps="false"
                 android:textColor="@color/orange"
                 android:textSize="13sp"
@@ -184,7 +187,7 @@
                 android:layout_weight="0.5"
                 android:backgroundTint="#E96614"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Enregistrer"
+                android:text="@string/save_btn_label"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
