--- a/app/src/main/res/layout/activity_contract.xml
+++ b/app/src/main/res/layout/activity_contract.xml
@@ -32,6 +32,7 @@
                         android:layout_height="25dp">
 
                         <ImageView
+                            android:id="@+id/backImage"
                             android:layout_width="20dp"
                             android:layout_height="15dp"
                             android:layout_centerInParent="true"
@@ -45,7 +46,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_bold"
                         android:includeFontPadding="false"
-                        android:text="Contrat"
+                        android:text="@string/contracts_label"
                         android:textColor="@color/blue"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -68,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
                             android:includeFontPadding="false"
-                            android:text="Formule : "
+                            android:text="@string/contract_name_label"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
 
@@ -93,7 +94,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
                             android:includeFontPadding="false"
-                            android:text="N° ligne : "
+                            android:text="@string/msisdn_label"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
 
@@ -118,7 +119,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
                             android:includeFontPadding="false"
-                            android:text="Numéro client : "
+                            android:text="@string/client_number_label"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
 
@@ -143,7 +144,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
                             android:includeFontPadding="false"
-                            android:text="Date activation : "
+                            android:text="@string/activation_date_label"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
 
@@ -168,7 +169,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
                             android:includeFontPadding="false"
-                            android:text="Date d’engagement : "
+                            android:text="@string/commitment_date"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
 
