--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -12,8 +12,8 @@
             android:layout_height="match_parent"
             android:background="@color/background"
             android:fillViewport="true"
-            android:paddingTop="10dp"
             android:overScrollMode="never"
+            android:paddingTop="10dp"
             android:scrollbars="none"
             tools:context=".views.dashboard.profile.HelpFragment">
 
@@ -34,6 +34,7 @@
                         android:layout_height="25dp">
 
                         <ImageView
+                            android:id="@+id/backImage"
                             android:layout_width="20dp"
                             android:layout_height="15dp"
                             android:layout_centerInParent="true"
@@ -57,8 +58,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/helpRecycler"
                     android:layout_width="match_parent"
-                    android:layout_marginHorizontal="10dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@id/title"
                     tools:itemCount="2"
