--- a/app/src/main/res/layout/confirm_purchase_dialog.xml
+++ b/app/src/main/res/layout/confirm_purchase_dialog.xml
@@ -72,6 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="65dp"
             android:layout_marginEnd="10dp"
+            android:backgroundTint="#E96614"
             android:fontFamily="@font/montserrat_extrabold"
             android:text="Oui"
             android:textAllCaps="false"
@@ -79,8 +80,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/description"
-            app:layout_constraintWidth_percent="0.45"
-            android:backgroundTint="#E96614" />
+            app:layout_constraintWidth_percent="0.45" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
