--- a/app/src/main/res/layout/recover_password_dialog.xml
+++ b/app/src/main/res/layout/recover_password_dialog.xml
@@ -63,6 +63,7 @@
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:paddingStart="20dp"
+            android:textAlignment="viewStart"
             android:textColorHint="@color/black"
             android:textSize="14sp" />
 
@@ -71,7 +72,8 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_marginHorizontal="70dp"
-            android:backgroundTint="#E96614"
+            android:backgroundTint="@color/button_background_selector"
+            android:enabled="false"
             android:fontFamily="@font/montserrat_extrabold"
             android:text="@string/ok_btn"
             android:textAllCaps="true"
