--- a/app/src/main/res/layout/confirm_renew_dialog.xml
+++ b/app/src/main/res/layout/confirm_renew_dialog.xml
@@ -41,7 +41,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/nunito_semibold"
             android:gravity="center"
-            android:text="Êtes vous sur de vouloir renouveler votre forfait ?"
+            android:text="@string/renew_bundle_description"
             android:textColor="#444342"
             android:textSize="18sp" />
 
@@ -60,7 +60,7 @@
                 android:layout_weight="0.5"
                 android:backgroundTint="@color/white"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Annuler"
+                android:text="@string/cancel_btn_label"
                 android:textAllCaps="false"
                 android:textColor="@color/orange"
                 android:textSize="13sp"
@@ -81,7 +81,7 @@
                 android:layout_weight="0.5"
                 android:backgroundTint="#E96614"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Oui je confirme"
+                android:text="@string/confirm_btn_label"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
