--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -82,7 +82,8 @@
                         android:layout_height="65dp"
                         android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
-                        android:backgroundTint="#EA7328"
+                        android:backgroundTint="@color/button_background_selector"
+                        android:enabled="false"
                         android:fontFamily="@font/montserrat_extrabold"
                         android:text="@string/save_btn_label"
                         android:textColor="@color/white"
