--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -68,6 +68,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
                         <TextView
@@ -152,6 +153,7 @@
                             android:textSize="12sp" />
                     </LinearLayout>
 
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -195,36 +197,6 @@
                             android:layout_weight="0.4"
                             android:fontFamily="@font/montserrat_semibold"
                             android:includeFontPadding="false"
-                            android:text="@string/phone_label"
-                            android:textColor="@color/black"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/phoneNumber"
-                            android:layout_width="0dp"
-                            android:layout_height="50dp"
-                            android:layout_weight="0.6"
-                            android:background="@drawable/editext_border"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:hint="@string/phone_hint"
-                            android:paddingStart="20dp"
-                            android:textAlignment="viewStart"
-                            android:textColorHint="@color/lightGrey"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.4"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:includeFontPadding="false"
                             android:text="@string/email_label"
                             android:textColor="@color/black"
                             android:textSize="12sp" />
@@ -241,99 +213,6 @@
                             android:fontFamily="@font/montserrat_semibold"
                             android:hint="@string/email_hint"
                             android:inputType="textEmailAddress"
-                            android:paddingStart="20dp"
-                            android:textAlignment="viewStart"
-                            android:textColor="@color/lightGrey"
-                            android:textColorHint="@color/lightGrey"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.4"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:includeFontPadding="false"
-                            android:text="@string/address_label"
-                            android:textColor="@color/black"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/address"
-                            android:layout_width="0dp"
-                            android:layout_height="50dp"
-                            android:layout_weight="0.6"
-                            android:background="@drawable/editext_border"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:hint="@string/address_hint"
-                            android:inputType="text"
-                            android:paddingStart="20dp"
-                            android:textAlignment="viewStart"
-                            android:textColorHint="@color/lightGrey"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.4"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:includeFontPadding="false"
-                            android:text="@string/city_label"
-                            android:textColor="@color/black"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/city"
-                            android:layout_width="0dp"
-                            android:layout_height="50dp"
-                            android:layout_weight="0.6"
-                            android:background="@drawable/editext_border"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:hint="@string/city_hint"
-                            android:inputType="text"
-                            android:paddingStart="20dp"
-                            android:textAlignment="viewStart"
-                            android:textColorHint="@color/lightGrey"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.4"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:includeFontPadding="false"
-                            android:text="@string/postal_code_label"
-                            android:textColor="@color/black"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/postalCode"
-                            android:layout_width="0dp"
-                            android:layout_height="50dp"
-                            android:layout_weight="0.6"
-                            android:background="@drawable/editext_border"
-                            android:fontFamily="@font/montserrat_semibold"
-                            android:hint="@string/postal_code_hint"
                             android:paddingStart="20dp"
                             android:textAlignment="viewStart"
                             android:textColorHint="@color/lightGrey"
@@ -388,10 +267,164 @@
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
                                 android:layout_marginEnd="10dp"
-                                android:src="@drawable/ic_edit"
-                                app:tint="@color/blue" />
+                                android:src="@drawable/pen_blue"/>
                         </RelativeLayout>
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/phone_label"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/phoneNumber"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.6"
+                            android:background="@drawable/editext_border"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:hint="@string/phone_hint"
+                            android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
+                            android:textColorHint="@color/lightGrey"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/city_label"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/city"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.6"
+                            android:background="@drawable/editext_border"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:hint="@string/city_hint"
+                            android:inputType="text"
+                            android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
+                            android:textColorHint="@color/lightGrey"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/address_label"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/address"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.6"
+                            android:background="@drawable/editext_border"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:hint="@string/address_hint"
+                            android:inputType="text"
+                            android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
+                            android:textColorHint="@color/lightGrey"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:visibility="gone"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/postal_code_label"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/postalCode"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.6"
+                            android:background="@drawable/editext_border"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:hint="@string/postal_code_hint"
+                            android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
+                            android:textColorHint="@color/lightGrey"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/n_cin"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/cin"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.6"
+                            android:background="@drawable/editext_border"
+                            android:fontFamily="@font/montserrat_semibold"
+                            android:hint="@string/n_cin"
+                            android:paddingStart="20dp"
+                            android:textAlignment="viewStart"
+                            android:textColorHint="@color/lightGrey"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/saveBtn"
