--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,9 +9,9 @@
         tools:context=".views.splashscreen.SplashScreenActivity">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/logo" />
+            android:src="@drawable/moov_logo" />
     </RelativeLayout>
 </layout>
