--- a/app/src/main/res/layout/fragment_login_new.xml
+++ b/app/src/main/res/layout/fragment_login_new.xml
@@ -20,14 +20,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/motif_gouche"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/motif_droit"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
 
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/image"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/motif_logo"
                     android:id="@+id/logo_motif"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginLeft="50dp"
                     android:scaleType="fitXY"/>
 
 
@@ -59,7 +59,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/motif_point"
-                    android:layout_marginStart="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="40dp"
                     android:layout_marginTop="50dp"/>
 
 
@@ -129,8 +130,8 @@
                         android:layout_height="15dp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/eye"
-                        android:visibility="gone"
+                        android:src="@drawable/show_password_selector"
+                        android:visibility="visible"
                         app:tint="#204CCB" />
                 </RelativeLayout>
             </LinearLayout>
@@ -163,6 +164,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/empreinte"
+                    android:visibility="invisible"
                     android:src="@drawable/print_selector"
                     android:layout_centerVertical="true"/>
 
@@ -170,6 +172,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/face"
+                    android:visibility="invisible"
                     android:layout_marginStart="30dp"
                     android:layout_toEndOf="@+id/empreinte"
                     android:src="@drawable/face_selector"
@@ -179,6 +182,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/eye"
+                    android:visibility="invisible"
                     android:layout_marginStart="30dp"
                     android:src="@drawable/eye_selector"
                     android:layout_toEndOf="@+id/face"
