--- a/app/src/main/res/xml/network_traffic_config.xml
+++ b/app/src/main/res/xml/network_traffic_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">apigray.mobiblanc.com</domain>
+        <domain includeSubdomains="true">rctapigray.mobiblanc.com</domain>
         <domain includeSubdomains="true">web.gray.mobiblanc.com</domain>
         <domain includeSubdomains="true">webgray.mobiblanc.com</domain>
         <domain includeSubdomains="true">www.orimi.com</domain>
